<resources>
    <string name="a_m">am</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_footer">Made with ❤️ in Slovakia</string>
    <string name="accent_color_black_and_white">Accent color of Black &amp; White theme</string>
    <string name="accent_color_white">Accent color of white theme</string>
    <string name="access_storage_prompt">Please grant our app access to all your files, it might not work well without it.</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="add_blocked_number_helper_text">Enter a number or a pattern (e.g. *12345*, +1*8888) to block all calls and messages from numbers matching the pattern.</string>
    <string name="add_contact">Add contact</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_fingerprint">Add fingerprint</string>
    <string name="add_new_sound">Add a new sound</string>
    <string name="add_number_to_contact">Add number to contact</string>
    <string name="add_password">Add password</string>
    <string name="add_to_existing_contact">Add to an existing contact</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="additional_info">Additional info</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_goes_off_in">"Time remaining till the alarm goes off:
%s"</string>
    <string name="alarm_warning">Please make sure the alarm works properly before relying on it. It could misbehave due to system restrictions related to battery saving.</string>
    <string name="album">Album</string>
    <string name="allow_access_more_media">Allow access to more media</string>
    <string name="allow_alarm_scheduled_messages">You must allow the app accessing internal alarms, else it cannot send scheduled messages.</string>
    <string name="allow_alarm_sleep_timer">You must allow the app accessing internal alarms, else it cannot turn off the application after sleep timer.</string>
    <string name="allow_full_screen_notifications_incoming_calls">You must allow the app displaying full screen notifications, else you may miss some incoming calls.</string>
    <string name="allow_full_screen_notifications_reminders">You must allow the app displaying full screen notifications, else you may miss some reminders.</string>
    <string name="allow_location_permission">"You must allow the app accessing your location, else it won't know it."</string>
    <string name="allow_notifications_files">You must allow the app displaying notifications, else it cannot show the progress bar.</string>
    <string name="allow_notifications_incoming_calls">You must allow the app displaying notifications, else it cannot show incoming calls.</string>
    <string name="allow_notifications_incoming_messages">You must allow the app displaying notifications, else it cannot show incoming messages.</string>
    <string name="allow_notifications_music_player">You must allow the app displaying notifications, else it cannot play songs.</string>
    <string name="allow_notifications_reminders">You must allow the app displaying notifications, else it cannot show reminders.</string>
    <string name="allow_notifications_voice_recorder">You must allow the app displaying notifications, else it cannot record audio.</string>
    <string name="altitude">Altitude</string>
    <string name="always">Always</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="android_lame_text">"Copyright (C) 2015 Naman Dwivedi

This is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.

This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.

You should have received a copy of the GNU General Public License along with this app. If not, see https://www.gnu.org/licenses/."</string>
    <string name="android_lame_title">AndroidLame (mp3 encoder)</string>
    <string name="android_lame_url">https://github.com/naman14/TAndroidLame</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anniversary">Anniversary</string>
    <string name="apng_text">"Copyright (C) 2019 Zhou Pengfei

Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License.You may obtain a copy of the License at

https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="apng_title">APNG Android (animated WebP support)</string>
    <string name="apng_url">https://github.com/penfeizhou/APNG4Android</string>
    <string name="app_corrupt">App Corrupt</string>
    <string name="app_icon_color">App icon color</string>
    <string name="app_icon_color_warning">WARNING: Some launchers do not handle app icon customization properly. In case the icon will disappear, try launching the app via Google Play or some widget, if available. Once launched, just set back the default orange icon #F57C00. You might have to reinstall the app in the worst case.</string>
    <string name="app_launcher_name">Flashlight</string>
    <string name="app_launcher_short">App Launcher</string>
    <string name="app_name">Simple Flashlight</string>
    <string name="app_on_sd_card">"You seem to have the app installed on an SD card, that makes the app widgets unavailable. You won't even see them on the list of available widgets. It is a system limitation, so if you want to use the widgets, you have to move the app back on the internal storage."</string>
    <string name="app_version">App version: %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append">"Append with '_1'"</string>
    <string name="append_filenames">Append filenames</string>
    <string name="apply_to_all">Apply to all</string>
    <string name="apply_to_all_apps">Apply colors to all Simple Apps</string>
    <string name="april">April</string>
    <string name="april_short">Apr</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
    <string name="artist">Artist</string>
    <string name="ascending">Ascending</string>
    <string name="at_start">At start</string>
    <string name="audio">Audio</string>
    <string name="audio_record_view_text">"Copyright (C) 2020 Armen Gevorgyan

Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License.You may obtain a copy of the License at

https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="audio_record_view_title">Audio Record View (audio visualization)</string>
    <string name="audio_record_view_url">https://github.com/Armen101/AudioRecordView</string>
    <string name="august">August</string>
    <string name="august_short">Aug</string>
    <string name="authenticate">Authenticate</string>
    <string name="authentication_blocked">Authentication blocked, please try again in a moment</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="auto_light_dark_theme">Auto light / dark</string>
    <string name="auto_theme">Auto</string>
    <string name="autofittextview_text">"Copyright 2014 Grantland Chew

Licensed under the Apache License, Version 2.0 (the License); you may not use this file except in compliance with the License. You may obtain a copy of the License at

https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
    <string name="autofittextview_url">https://github.com/grantland/android-autofittextview</string>
    <string name="back">Back</string>
    <string name="background_color">Background color</string>
    <string name="backups">Backups</string>
    <string name="before_asking_question">Before you ask a question, please first read the</string>
    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
    <string name="before_rate_read_faq">Before you rate us, please check the app settings and read the Frequently Asked Questions first. If you have any problems, maybe the solution is there.</string>
    <string name="block_hidden_calls">Block calls from hidden numbers</string>
    <string name="block_not_stored_calls">Block calls from not stored contacts</string>
    <string name="manage_blocked_numbers">Manage blocked numbers</string>
    <string name="not_blocking_anyone">You are not blocking anyone.</string>
    <string name="prepend_filenames">Prepend filenames</string>
    <string name="string_to_add">String to add</string>
</resources>