<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rename_items_holder" android:paddingTop="@dimen/activity_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/activity_margin" android:paddingEnd="@dimen/activity_margin"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.simplemobiletools.commons.views.MyTextInputLayout android:id="@id/rename_items_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/string_to_add">
        <com.google.android.material.textfield.TextInputEditText android:textSize="@dimen/normal_text_size" android:id="@id/rename_items_value" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_margin" android:singleLine="true" android:textCursorDrawable="@null" />
    </com.simplemobiletools.commons.views.MyTextInputLayout>
    <RadioGroup android:id="@id/rename_items_radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/rename_items_hint">
        <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/rename_items_radio_append" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/append_filenames" />
        <com.simplemobiletools.commons.views.MyCompatRadioButton android:id="@id/rename_items_radio_prepend" android:paddingTop="@dimen/normal_margin" android:paddingBottom="@dimen/normal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/prepend_filenames" />
    </RadioGroup>
</RelativeLayout>