<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/block_numbers_coordinator" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.MaterialToolbar android:id="@id/block_numbers_toolbar" android:background="@color/color_primary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:menu="@menu/menu_add_blocked_number" app:title="@string/manage_blocked_numbers" app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/manage_blocked_numbers_wrapper" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="?actionBarSize">
        <LinearLayout android:orientation="vertical" android:id="@id/block_options_list" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <RelativeLayout android:id="@id/block_unknown_holder" android:background="@drawable/ripple_background" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/SettingsHolderCheckboxStyle">
                <com.simplemobiletools.commons.views.MyAppCompatCheckbox android:id="@id/block_unknown" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/block_not_stored_calls" style="@style/SettingsCheckboxStyle" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/block_hidden_holder" android:background="@drawable/ripple_background" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/SettingsHolderCheckboxStyle">
                <com.simplemobiletools.commons.views.MyAppCompatCheckbox android:id="@id/block_hidden" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/block_hidden_calls" style="@style/SettingsCheckboxStyle" />
            </RelativeLayout>
        </LinearLayout>
        <ImageView android:id="@id/block_numbers_divider" android:background="@color/divider_grey" android:layout_width="fill_parent" android:layout_height="1.0px" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/block_options_list" />
        <com.simplemobiletools.commons.views.MyRecyclerView android:id="@id/manage_blocked_numbers_list" android:scrollbars="vertical" android:clipToPadding="false" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/block_numbers_divider" />
        <com.simplemobiletools.commons.views.MyTextView android:textSize="@dimen/bigger_text_size" android:textStyle="italic" android:gravity="center_horizontal" android:id="@id/manage_blocked_numbers_placeholder" android:paddingTop="@dimen/activity_margin" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/not_blocking_anyone" android:alpha="0.8" android:paddingStart="@dimen/activity_margin" android:paddingEnd="@dimen/activity_margin" app:layout_constraintTop_toBottomOf="@id/block_options_list" />
        <com.simplemobiletools.commons.views.MyTextView android:textSize="@dimen/bigger_text_size" android:gravity="center" android:id="@id/manage_blocked_numbers_placeholder_2" android:background="@drawable/ripple_all_corners" android:padding="@dimen/activity_margin" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_a_blocked_number" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/manage_blocked_numbers_placeholder" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>